--- a/WhiteBoardDaemon/WhiteBoardDaemon.vcxproj
+++ b/WhiteBoardDaemon/WhiteBoardDaemon.vcxproj
@@ -210,6 +210,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GeneratedFiles\ui_whiteboarddaemon.h" />
+    <ClInclude Include="utility.h" />
     <CustomBuild Include="configdialog.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Moc%27ing configdialog.h...</Message>
